# TRCLAB-Realsense

./: .gitignore  CMakeLists.txt  README.md  RealSense.cpp  rs-hello-realsense.cpp
lib/realsense/: readme.md
libs/librealsense/include/: readme.md
